--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="container">
-        <h3>Lunch</h3>
+        <h3>Break</h3>
         <div class="time" id="time2">
             00:00:00.000
         </div>
